--- a/package.json
+++ b/package.json
@@ -30,41 +30,42 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "9.0.2",
-        "@angular/cdk": "9.0.1",
-        "@angular/common": "9.0.2",
-        "@angular/compiler": "9.0.2",
-        "@angular/core": "9.0.2",
+        "@angular/animations": "9.1.0",
+        "@angular/cdk": "9.2.0",
+        "@angular/common": "9.1.0",
+        "@angular/compiler": "9.1.0",
+        "@angular/core": "9.1.0",
         "@angular/flex-layout": "9.0.0-beta.29",
-        "@angular/forms": "9.0.2",
-        "@angular/localize": "9.0.2",
-        "@angular/material": "9.1.0",
-        "@angular/platform-browser": "9.0.2",
-        "@angular/platform-browser-dynamic": "9.0.2",
-        "@angular/platform-server": "9.0.2",
-        "@angular/router": "9.0.2",
-        "@angular/upgrade": "9.0.2",
-        "@clr/angular": "2.3.8",
-        "@clr/icons": "2.3.8",
-        "@clr/ui": "2.3.8",
-        "@covalent/core": "2.1.1",
-        "@fortawesome/angular-fontawesome": "0.6.0",
-        "@fortawesome/fontawesome-svg-core": "1.2.27",
-        "@fortawesome/free-brands-svg-icons": "5.12.1",
-        "@fortawesome/free-regular-svg-icons": "5.12.1",
-        "@fortawesome/free-solid-svg-icons": "5.12.1",
-        "@ng-bootstrap/ng-bootstrap": "6.0.0",
-        "@ng-select/ng-select": "3.7.2",
-        "@ngx-translate/core": "12.1.1",
-        "@webcomponents/custom-elements": "1.3.2",
-        "angular-calendar": "0.28.2",
-        "angular-draggable-droppable": "4.3.8",
+        "@angular/forms": "9.1.0",
+        "@angular/localize": "9.1.0",
+        "@angular/material": "9.2.0",
+        "@angular/platform-browser": "9.1.0",
+        "@angular/platform-browser-dynamic": "9.1.0",
+        "@angular/platform-server": "9.1.0",
+        "@angular/router": "9.1.0",
+        "@angular/upgrade": "9.1.0",
+        "@clr/angular": "3.1.0",
+        "@clr/core": "3.1.0",
+        "@clr/icons": "3.1.0",
+        "@clr/ui": "3.1.0",
+        "@covalent/core": "3.0.1",
+        "@fortawesome/angular-fontawesome": "0.6.1",
+        "@fortawesome/fontawesome-svg-core": "1.2.28",
+        "@fortawesome/free-brands-svg-icons": "5.13.0",
+        "@fortawesome/free-regular-svg-icons": "5.13.0",
+        "@fortawesome/free-solid-svg-icons": "5.13.0",
+        "@ng-bootstrap/ng-bootstrap": "6.0.2",
+        "@ng-select/ng-select": "4.0.0",
+        "@ngx-translate/core": "12.1.2",
+        "@webcomponents/custom-elements": "1.4.1",
+        "angular-calendar": "0.28.5",
+        "angular-draggable-droppable": "4.3.10",
         "angular-resizable-element": "3.3.0",
-        "angularx-flatpickr": "6.3.0",
+        "angularx-flatpickr": "6.3.1",
         "bootstrap": "4.4.1",
         "calendar-utils": "0.7.0",
         "core-js": "3.6.4",
-        "date-fns": "2.9.0",
+        "date-fns": "2.11.1",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.4.6",
         "flatpickr": "4.6.3",
@@ -72,35 +73,35 @@
         "jquery": "3.4.1",
         "lodash": "4.17.15",
         "moment": "2.24.0",
-        "mutationobserver-shim": "0.3.3",
-        "ngx-bootstrap": "5.3.2",
-        "ngx-logger": "4.1.2",
-        "primeng": "9.0.0-rc.4",
+        "mutationobserver-shim": "0.3.5",
+        "ngx-bootstrap": "5.5.0",
+        "ngx-logger": "4.1.3",
+        "primeng": "9.0.5",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.4",
-        "rxjs": "6.5.4",
-        "tslib": "1.11.0",
-        "zone.js": "0.10.2"
+        "rxjs": "6.5.5",
+        "tslib": "1.11.1",
+        "zone.js": "0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.900.3",
-        "@angular-devkit/core": "9.0.3",
-        "@angular/cli": "9.0.3",
-        "@angular/compiler-cli": "9.0.2",
-        "@angular/language-service": "9.0.2",
+        "@angular-devkit/build-angular": "0.901.0",
+        "@angular-devkit/core": "9.1.0",
+        "@angular/cli": "9.1.0",
+        "@angular/compiler-cli": "9.1.0",
+        "@angular/language-service": "9.1.0",
         "@compodoc/compodoc": "1.1.11",
-        "@types/jasmine": "3.5.6",
-        "@types/node": "12.12.28",
-        "@typescript-eslint/eslint-plugin": "2.21.0",
-        "@typescript-eslint/eslint-plugin-tslint": "2.21.0",
-        "@typescript-eslint/parser": "2.21.0",
-        "codelyzer": "5.2.1",
+        "@types/jasmine": "3.5.10",
+        "@types/node": "13.11.0",
+        "@typescript-eslint/eslint-plugin": "2.26.0",
+        "@typescript-eslint/eslint-plugin-tslint": "2.26.0",
+        "@typescript-eslint/parser": "2.26.0",
+        "codelyzer": "5.2.2",
         "eslint": "6.8.0",
-        "eslint-config-prettier": "6.10.0",
+        "eslint-config-prettier": "6.10.1",
         "eslint-plugin-prettier": "3.1.2",
-        "husky": "3.1.0",
+        "husky": "4.2.3",
         "jasmine-core": "3.5.0",
-        "jasmine-spec-reporter": "4.2.1",
+        "jasmine-spec-reporter": "5.0.1",
         "jshint-stylish": "2.2.1",
         "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
@@ -108,21 +109,21 @@
         "karma-coverage-istanbul-reporter": "2.1.1",
         "karma-firefox-launcher": "1.3.0",
         "karma-ie-launcher": "1.0.0",
-        "karma-jasmine": "2.0.1",
-        "karma-jasmine-html-reporter": "1.5.2",
+        "karma-jasmine": "3.1.1",
+        "karma-jasmine-html-reporter": "1.5.3",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-remap-istanbul": "0.6.0",
         "modernizr": "3.9.1",
-        "prettier": "1.19.1",
+        "prettier": "2.0.2",
         "pretty-quick": "2.0.1",
         "protractor": "6.0.0",
-        "stylelint": "12.0.1",
-        "stylelint-config-prettier": "7.0.0",
-        "stylelint-config-standard": "19.0.0",
-        "ts-node": "8.6.2",
+        "stylelint": "13.3.0",
+        "stylelint-config-prettier": "8.0.1",
+        "stylelint-config-standard": "20.0.0",
+        "ts-node": "8.8.1",
         "tslint-config-standard": "9.0.0",
         "tslint-to-eslint-config": "0.5.1",
-        "typescript": "3.7.5",
-        "webpack-bundle-analyzer": "3.6.0"
+        "typescript": "3.8.3",
+        "webpack-bundle-analyzer": "3.6.1"
     }
 }
