--- a/package.json
+++ b/package.json
@@ -30,78 +30,78 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "9.1.0",
-        "@angular/cdk": "9.2.0",
-        "@angular/common": "9.1.0",
-        "@angular/compiler": "9.1.0",
-        "@angular/core": "9.1.0",
+        "@angular/animations": "9.1.4",
+        "@angular/cdk": "9.2.2",
+        "@angular/common": "9.1.4",
+        "@angular/compiler": "9.1.4",
+        "@angular/core": "9.1.4",
         "@angular/flex-layout": "9.0.0-beta.29",
-        "@angular/forms": "9.1.0",
-        "@angular/localize": "9.1.0",
-        "@angular/material": "9.2.0",
-        "@angular/platform-browser": "9.1.0",
-        "@angular/platform-browser-dynamic": "9.1.0",
-        "@angular/platform-server": "9.1.0",
-        "@angular/router": "9.1.0",
-        "@angular/upgrade": "9.1.0",
-        "@clr/angular": "3.1.0",
-        "@clr/core": "3.1.0",
-        "@clr/icons": "3.1.0",
-        "@clr/ui": "3.1.0",
+        "@angular/forms": "9.1.4",
+        "@angular/localize": "9.1.4",
+        "@angular/material": "9.2.2",
+        "@angular/platform-browser": "9.1.4",
+        "@angular/platform-browser-dynamic": "9.1.4",
+        "@angular/platform-server": "9.1.4",
+        "@angular/router": "9.1.4",
+        "@angular/upgrade": "9.1.4",
+        "@clr/angular": "3.1.1",
+        "@clr/core": "3.1.1",
+        "@clr/icons": "3.1.1",
+        "@clr/ui": "3.1.1",
         "@covalent/core": "3.0.1",
         "@fortawesome/angular-fontawesome": "0.6.1",
         "@fortawesome/fontawesome-svg-core": "1.2.28",
         "@fortawesome/free-brands-svg-icons": "5.13.0",
         "@fortawesome/free-regular-svg-icons": "5.13.0",
         "@fortawesome/free-solid-svg-icons": "5.13.0",
-        "@ng-bootstrap/ng-bootstrap": "6.0.2",
+        "@ng-bootstrap/ng-bootstrap": "6.1.0",
         "@ng-select/ng-select": "4.0.0",
         "@ngx-translate/core": "12.1.2",
         "@webcomponents/custom-elements": "1.4.1",
-        "angular-calendar": "0.28.5",
-        "angular-draggable-droppable": "4.3.10",
+        "angular-calendar": "0.28.13",
+        "angular-draggable-droppable": "4.4.4",
         "angular-resizable-element": "3.3.0",
         "angularx-flatpickr": "6.3.1",
         "bootstrap": "4.4.1",
-        "calendar-utils": "0.7.0",
-        "core-js": "3.6.4",
-        "date-fns": "2.11.1",
+        "calendar-utils": "0.8.0",
+        "core-js": "3.6.5",
+        "date-fns": "2.13.0",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.4.6",
         "flatpickr": "4.6.3",
         "hammerjs": "2.0.8",
-        "jquery": "3.4.1",
+        "jquery": "3.5.1",
         "lodash": "4.17.15",
-        "moment": "2.24.0",
+        "moment": "2.25.3",
         "mutationobserver-shim": "0.3.5",
-        "ngx-bootstrap": "5.5.0",
-        "ngx-logger": "4.1.3",
-        "primeng": "9.0.5",
+        "ngx-bootstrap": "5.6.1",
+        "ngx-logger": "4.1.9",
+        "primeng": "9.0.6",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.4",
         "rxjs": "6.5.5",
-        "tslib": "1.11.1",
+        "tslib": "1.11.2",
         "zone.js": "0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.901.0",
-        "@angular-devkit/core": "9.1.0",
-        "@angular/cli": "9.1.0",
-        "@angular/compiler-cli": "9.1.0",
-        "@angular/language-service": "9.1.0",
+        "@angular-devkit/build-angular": "0.901.4",
+        "@angular-devkit/core": "9.1.4",
+        "@angular/cli": "9.1.4",
+        "@angular/compiler-cli": "9.1.4",
+        "@angular/language-service": "9.1.4",
         "@compodoc/compodoc": "1.1.11",
         "@types/jasmine": "3.5.10",
-        "@types/node": "13.11.0",
-        "@typescript-eslint/eslint-plugin": "2.26.0",
-        "@typescript-eslint/eslint-plugin-tslint": "2.26.0",
-        "@typescript-eslint/parser": "2.26.0",
+        "@types/node": "13.13.5",
+        "@typescript-eslint/eslint-plugin": "2.31.0",
+        "@typescript-eslint/eslint-plugin-tslint": "2.31.0",
+        "@typescript-eslint/parser": "2.31.0",
         "codelyzer": "5.2.2",
         "eslint": "6.8.0",
-        "eslint-config-prettier": "6.10.1",
-        "eslint-plugin-prettier": "3.1.2",
-        "husky": "4.2.3",
+        "eslint-config-prettier": "6.11.0",
+        "eslint-plugin-prettier": "3.1.3",
+        "husky": "4.2.5",
         "jasmine-core": "3.5.0",
-        "jasmine-spec-reporter": "5.0.1",
+        "jasmine-spec-reporter": "5.0.2",
         "jshint-stylish": "2.2.1",
         "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
@@ -113,17 +113,17 @@
         "karma-jasmine-html-reporter": "1.5.3",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-remap-istanbul": "0.6.0",
-        "modernizr": "3.9.1",
-        "prettier": "2.0.2",
+        "modernizr": "3.11.1",
+        "prettier": "2.0.5",
         "pretty-quick": "2.0.1",
         "protractor": "6.0.0",
-        "stylelint": "13.3.0",
+        "stylelint": "13.3.3",
         "stylelint-config-prettier": "8.0.1",
         "stylelint-config-standard": "20.0.0",
-        "ts-node": "8.8.1",
+        "ts-node": "8.10.1",
         "tslint-config-standard": "9.0.0",
-        "tslint-to-eslint-config": "0.5.1",
+        "tslint-to-eslint-config": "1.0.0-beta",
         "typescript": "3.8.3",
-        "webpack-bundle-analyzer": "3.6.1"
+        "webpack-bundle-analyzer": "3.7.0"
     }
 }
